# artistic-style-classifier

./: artistic-style-classifier.ipynb  pyproject.toml
