[tool.poetry]
name = "artistic-style-classifier"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <rphln@users.noreply.github.com>"]
license = "MPL"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
torchvision = "^0.11.1"
scikit-learn = "^1.0.1"
tqdm = "^4.62.3"
pandas = "^1.3.4"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
